--- a/web/front/style.css
+++ b/web/front/style.css
@@ -1,10 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 body {
  background: #111;
  font-family: "Open Sans",  Impact;
  margin: 0;
+}
+
+.brand{
+  color: white;
 }
 
 /* SCROLL-BAR */
@@ -20,6 +24,46 @@ body {
     width: 20px;
     height: 100%;
     background: rgba(255, 255, 255, 0.05);
+}
+body {
+  background: #1D1B26;
+}
+#app {
+  text-decoration: none;
+  color: white;
+  display: block;
+  position: relative;
+  text-align: center;
+  padding: 15px 30px;
+  border: 1px solid;
+  border-image: linear-gradient(180deg, #ff3000, #ed0200, #ff096c, #d50082);
+  border-image-slice: 1;
+  margin: 5% 5%;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  overflow: hidden;
+  letter-spacing: 2px;
+  transition: .8s cubic-bezier(.165, .84, .44, 1);
+}
+#app:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 0;
+  width: 100%;
+  z-index: -1;
+  color: white;
+  background: linear-gradient(180deg, #ff3000, #ed0200, #ff096c, #d50082);
+  transition: .8s cubic-bezier(.165, .84, .44, 1);
+}
+#app:hover {
+  background: rgba(255, 255, 255, 0);
+}
+#app:hover:before {
+  bottom: 0%;
+  top: auto;
+  height: 100%;
 }
 #progressbar
 {
@@ -69,6 +113,9 @@ body {
   text-align: center;
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
   width: 100vw;
+  font-family: 'Montserrat', sans-serif;
+
+  margin-top: 5%;
 }
 #footer .footer {
   min-height: 200px;
@@ -121,23 +168,41 @@ body {
 }
 
 #text1{
-  width: 600px;
+  width: 550px;
   height: 250px;
+  resize: none; 
+  border : 2px solid;
+  border-radius: 2%;
+  margin-bottom: 20px;
 }
 #text2{
-  width: 600px;
-  height: 250px;
+  margin: auto;
+  font-size: 150;
+  margin: auto;
+  color: white;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+#text3{
+  margin: auto;
+  font-size: 50;
+  margin: auto;
+  color: white;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 #all_of_texts{
   display: column;
   align-items: center;
   margin-bottom: 15px;
+  text-align: center;
 }
 
 .area {
   text-align: center;
   font-size: 6.5em;
   color: #fff;
+  margin-bottom: 40px;
   letter-spacing: -7px;
   font-weight: 700;
   text-transform: uppercase;
